--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -7,6 +7,7 @@ header{
     top:0;
     box-shadow: 10px 0px 10px base.$headerColor;
     z-index: 99;
+    max-width: 100%;
 
     .container{
         max-width: 1360px;
@@ -26,9 +27,11 @@ header{
     }
 
     .header__logo{
+        flex-wrap: nowrap;
         h1{
             color:#fff;
             font-size: 4rem;
+            display: block;
 
             @media (max-width: 1024px){
                 font-size: 2rem;
@@ -62,6 +65,11 @@ header{
             align-items: center; 
             text-decoration: none;
             gap: 1rem;
+            
+            @media (max-width: 640px){
+                display: flex;
+                justify-content: center;
+            }
 
             li{
                 color: #fff;
@@ -83,7 +91,7 @@ header{
         width: 110px;
         cursor: pointer;
         
-        @media (max-width: 1024px){
+        @media (max-width: 1300px){
             display: none;
         }
         @media(max-width:640px){
