--- a/src/styles/layout/hero.scss
+++ b/src/styles/layout/hero.scss
@@ -4,13 +4,28 @@
     padding-top: 64px;
     padding-bottom: 100px;
 
-    &__text{
+    &__col{
         color: base.$clockColor;
-        text-align: center;  
-        font-size: 40px;
-        line-height: 56px;
-        font-weight: 800;
-        margin-top: 64px;
-        margin-bottom: 40px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-content: space-between;
+        gap: 2rem;
+    }
+    &__text{
+        display: flex;
+        margin: 0 auto;
+    }
+    &__button{
+        border-radius: 6px;
+        color: #fff ;
+        background-color: base.$storeColor;
+        font-size: 2rem;
+        padding:10px 30px;
+        &:hover{
+            transform: translateY(-5pix);
+            transition: all 0.2s;
+            font-weight: bold;
+            background-color: darken($color: base.$storeColor, $amount: 10);
+        }
     }
 }
