add hide butons

--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -61,6 +61,7 @@ header{
     .header__nav{
         &__list{
             display: flex;
+            justify-content: space-between;
             list-style: none;
             align-items: center; 
             text-decoration: none;
