--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -30,3 +30,45 @@ body{
         max-width: 90%;
     }
 }
+
+.link-tree {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px 0;
+
+  a {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    background-color: lighten($headerColor, 20%);
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+
+    i{
+        color: $storeColor;
+        padding-right: 5px;
+    }
+
+    &:hover {
+      background-color: $headerColor;
+    }
+
+    .store-icon {
+      width: 30px;
+      height: 30px;
+      margin-right: 10px;
+      fill: $storeColor;
+    }
+
+    .store-name {
+      font-weight: bold;
+      color: $titleColor;
+    }
+  }
+}
+
+.link-tree svg {
+  /* Add specific SVG paths for each store icon here */
+}
