--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,5 @@
 @use "./base/base.scss";
 @use "./layout/header.scss";
-@use "./layout/hero.scss";
-@use "./layout/store.scss";
 
 .store__home {
     display: none;
@@ -10,3 +8,42 @@
 .store__home.active {
     display: block;
 }
+
+
+.link-tree {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 0;
+    justify-content: center;
+  
+    a {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      background-color: lighten(base.$headerColor, 20%);
+      border-radius: 5px;
+      transition: all 0.3s ease-in-out;
+  
+      &:hover {
+        background-color: base.$headerColor;
+      }
+  
+      .store-icon {
+        width: 30px;
+        height: 30px;
+        margin-right: 10px;
+        fill: base.$storeColor;
+      }
+  
+      .store-name {
+        font-weight: bold;
+        color: base.$titleColor;
+      }
+    }
+  }
+  
+  .link-tree svg {
+    /* Add specific SVG paths for each store icon here */
+  }
